--- a/AmeWeb/_Imports.razor
+++ b/AmeWeb/_Imports.razor
@@ -6,5 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using AmeDhcp
-@using AmeDhcp.Shared
+@using AmeWeb
+@using AmeWeb.Shared
+@using ChartJs.Blazor
